added pictures and changed name

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
       <div class="profile">
         <img src="assets/img/profile-head-edit.jpeg" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Luis Acevedo (Arnie)</a></h1>
+        <h1 class="text-light"><a href="index.html">Adriana Icasiano</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
           <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
@@ -72,7 +72,7 @@
   <!-- ======= Hero Section ======= -->
   <section id="hero" class="d-flex flex-column justify-content-end align-items-center">
     <div class="hero-container" data-aos="fade-in">
-      <h1>Luis Acevedo</h1>
+      <h1>Adriana Icasiano</h1>
       <p>I'm <span class="typed" data-typed-items="Dedicated, a Developer, a Freelancer, a Team Builder"></span></p>
     </div>
   </section><!-- End Hero -->
@@ -254,7 +254,7 @@
           <div class="col-lg-6" data-aos="fade-up">
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
-              <h4>Luis Acevedo</h4>
+              <h4>Adriana Icasiano</h4>
               <p><em>Innovative problem solver with 3+ years of experience of opening new stores and opperations of a large school district. Support based approach allows for more user input and a better final result.</em></p>
               <ul>
                 <li>Fort Myers, FL</li>
