Added updates to education

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Arnie Acevedo Resume</title>
+  <title>Adriana Icasiano Resume</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -85,7 +85,9 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>Having a background in opening retail stores and restaurants has led me to my passion of helping people. Being logic minded and always looking for answers and patterns to help predict trends, lead me to discover my love for data analytics. Combining my expertise I strive to build a strong well informed team!</p>
+          <p>I am a mom of two kids curious and passionate about learning how to use data analytics to make lives better. 
+            I am currently a student at the Rutgers Data Science Boot Camp program. 
+            Learning how to code is big switch from my accounting and finance background, but I'm enjoying the challenge.   </p>
         </div>
 
         <div class="row">
@@ -93,25 +95,25 @@
             <img src="assets/img/profile-head-edit.jpeg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Bookkeeper &amp; Freelance Web Design</h3>
+            <h3>Freelance Accounting and Finance Consultant </h3>
             <p class="font-italic">
-              Assist in the maintenance of all public school kitchen accounts, our central office, large equipment ordering, and invoicing.
-              Currently in a Data Analytic Bootcamp finishing this August, and offering basic freelance web design to help anyone get started.
+              Assist small businesses with report automation. 
+              Currently in a Data Analytic Bootcamp finishing this September, and offering data analytics and business processes improvement services to businesses.
             </p>
             <div class="row">
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>24 August 1996</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>luis-acevedo.github.io</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+1 239-258-8658</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Fort Myer, Florida</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Graduate:</strong> <span>Rutgers Masters in Financial Accountancy</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>adriana-icasiano.github.io</span></li>            
+                  <li><i class="bi bi-chevron-right"></i> <strong>State:</strong> <span>New Jersey</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>yhatin@gmail.com</span></li>
                 </ul>
               </div>
               <div class="col-lg-6">
                 <ul>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>24</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>UCF Data Analytics and Visualization</span></li>
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>luisa@leeschools.net</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Undergraduate Degree:</strong> <span>Rutgers BA in Science (Accounting)</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>License:</strong> <span>CPA </span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>License Number:</strong> <span>#20CC03607000</span></li>
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
                 </ul>
               </div>
@@ -255,26 +257,39 @@
             <h3 class="resume-title">Sumary</h3>
             <div class="resume-item pb-0">
               <h4>Adriana Icasiano</h4>
-              <p><em>Innovative problem solver with 3+ years of experience of opening new stores and opperations of a large school district. Support based approach allows for more user input and a better final result.</em></p>
+              <p><em>I am an accounting and finance professional with 12 years of experience in the financial, energy and technology industries. 
+                I am passionate about developing trends through data, identifying risks and improving business processes to aid better business decision making.</em></p>
               <ul>
-                <li>Fort Myers, FL</li>
-                <li>(239) 258-8658</li>
-                <li>arnieacevedo1996@gmail.com</li>
+                <li>Berkeley Heights, NJ</li>
+                <li>(862) 290-0876</li>
+                <li>yhatin@gmail.com</li>
               </ul>
             </div>
 
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>High School Diploma &amp; Fine Arts Degree</h4>
-              <h5>2011 - 2015</h5>
-              <p><em>Cypress Lake High School Center of the Arts, Fort Myers, fL</em></p>
-              <p>Learned the technology side of performing arts which was a seperate school ciriculumn on top of our normal class load. This jumpstarted my passion for technology.</p>
+              <h4>Data Science Bootcamp </h4>
+              <h5>March 2021 - Expected completion September 2021</h5>
+              <p><em>Rutgers University Newark, NJ</em></p>
+              <p>[Placeholder for description]</p>
             </div>
             <div class="resume-item">
-              <h4>Certificate of Completion in Data Analytics &amp; Visualization</h4>
-              <h5>2021 - August 2021 (Expected Completion)</h5>
-              <p><em>University of Central Florida, Orlando, FL</em></p>
-              <p>Trilogy Education Services bootcamp meant to familiarize me with the basics of data coding languages. As well as basic web design for Visualization. </p>
+              <h4>CPA (Certified Public Accoutant) </h4>
+              <h5>January 2010 - Expires in December 2023 </h5>
+              <p><em>New Jersey</em></p>
+              <p>[Placeholder for description] </p>
+            </div>
+            <div class="resume-item">
+              <h4>Masters in Financial Accounting</h4>
+              <h5>August 2007 - January 2008 </h5>
+              <p><em>Rutgers University, Newark, NJ</em></p>
+              <p>[Placeholder for description]</p>
+            </div>
+            <div class="resume-item">
+              <h4>Bachelors in Science, Accounting</h4>
+              <h5>September 2004 - June 2007 </h5>
+              <p><em>Rutgers University, New Brunswick, NJ</em></p>
+              <p>[Placeholder for description] </p>
             </div>
           </div>
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
@@ -571,19 +586,19 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>Fort Myers, FL 33966</p>
+                <p>New Jersey</p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>arnieacevedo1996@gmail.com</p>
+                <p>yhatin@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
                 <h4>Call:</h4>
-                <p>+1 (239) 258 8658</p>
+                <p>+1 (862) xxx xxxx</p>
               </div>
 
               <iframe width="100%" height="300" style="border:0" loading="lazy" allowfullscreen src="https://www.google.com/maps/embed/v1/view?zoom=11&center=26.6406%2C-81.8723&key=AIzaSyCxm9efYN-ybemvigd63W4hzlhC5WwIxgQ"></iframe>
